<resources>
    <string name="app_name">CatApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="fab">fab</string>
    <string name="click_to_show_cats">Click to show cats</string>
    <string name="show">Show</string>
    <string name="add_cat">Add Cat</string>
    <string name="clear_cats">Clear cats</string>
    <string name="add_default_cats">Add default cats</string>
    <string name="title_activity_settings">SettingsActivity</string>



    <string name="gender">Gender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="select_icon">Select Icon</string>
    <string name="create">Create</string>
    <string name="add_random_cat">Add random Cat</string>
</resources>