<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.catapp.ui.MainActivity">
    <item
        android:id="@+id/add_cat"
        android:orderInCategory="10"
        android:title="@string/add_cat"
        android:icon="@drawable/ic_baseline_add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/clear_cats"
        android:orderInCategory="20"
        android:title="@string/clear_cats"
        app:showAsAction="never"/>
    <item
        android:id="@+id/add_random_cat"
        android:orderInCategory="30"
        android:title="@string/add_random_cat"
        app:showAsAction="never"/>
    <item
        android:id="@+id/add_default_cats"
        android:orderInCategory="40"
        android:title="@string/add_default_cats"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>